--- a/config/config.yaml
+++ b/config/config.yaml
@@ -894,7 +894,7 @@ coils:
     allow_enable: true 
   c_flipper_upper_main:
     number: A0-B0-4
-    default_pulse_ms: 30
+    default_pulse_ms: 40
   c_flipper_upper_hold:
     number: A0-B0-5
     allow_enable: true 
@@ -1042,15 +1042,15 @@ diverters:
     type: pulse
     activation_time: 1s
     activation_switches: s_loopleft
-    enable_events: leftloop_travel
-    disable_events: leftloop_enabled, leftloop_disabled, leftloop_closed
+    enable_events: diverter_travel_enabled
+    disable_events: diverter_travel_disabled
   right_divertergate_hold:
     activation_coil: c_flipper_gate_hold
     type: hold
     activation_time: 2s
     activation_switches: s_loopleft
-    enable_events: leftloop_travel
-    disable_events: leftloop_enabled, leftloop_disabled, leftloop_closed
+    enable_events: diverter_travel_enabled
+    disable_events: diverter_travel_disabled
 
 #   left_diverter:
 #     activation_coil: c_upperleftgate
