--- a/modes/attract/shows/attract_show_alllights.yaml
+++ b/modes/attract/shows/attract_show_alllights.yaml
@@ -1,6 +1,9 @@
 #show_version=5
 - duration: 1
   lights:
+    lundercab: 
+      color: green
+      fade: 200ms
     lfeature: 
       color: green
       fade: 200ms
@@ -16,6 +19,9 @@
     l_worldtarget: off
 - duration: 1
   lights:
+    lundercab: 
+      color: yellow
+      fade: 200ms
     lfeature:
       color: yellow
       fade: 200ms
@@ -31,6 +37,9 @@
     l_worldtarget: off
 - duration: 1
   lights:
+    lundercab: 
+      color: blue
+      fade: 200ms
     lfeature:
       color: blue
       fade: 200ms
@@ -46,6 +55,9 @@
     l_worldtarget: off
 - duration: 1
   lights:
+    lundercab: 
+      color: brown
+      fade: 200ms
     lfeature:
       color: brown
       fade: 200ms
@@ -61,6 +73,9 @@
     l_worldtarget: off
 - duration: 1
   lights:
+    lundercab: 
+      color: red
+      fade: 200ms
     lfeature:
       color: red
       fade: 200ms
@@ -76,6 +91,9 @@
     l_worldtarget: off
 - duration: 1
   lights:
+    lundercab: 
+      color: purple
+      fade: 200ms
     lfeature:
       color: purple
       fade: 200ms
