--- a/modes/attract/shows/attract_show_strobelights.yaml
+++ b/modes/attract/shows/attract_show_strobelights.yaml
@@ -1,6 +1,8 @@
 #show_version=5
 - duration: 1
   lights:
+    lundercab: off
+    lundercab_chase1: (color)
     lfeature: off 
     lgi:
         color: white
@@ -21,6 +23,8 @@
         fade: 200ms
 - duration: 1
   lights:
+    lundercab: off
+    lundercab_chase2: (color)
     lfeature: off
     l_collect2: 
         color: (color)
@@ -39,6 +43,8 @@
         fade: 200ms
 - duration: 1
   lights:
+    lundercab: off
+    lundercab_chase3: (color)
     lfeature: off
     l_collect3:
         color: (color)
@@ -57,6 +63,8 @@
         fade: 200ms
 - duration: 1
   lights:
+    lundercab: off
+    lundercab_chase4: (color)
     lfeature: off
     l_collect4:
         color: (color)
@@ -75,6 +83,8 @@
         fade: 200ms
 - duration: 1
   lights:
+    lundercab: off
+    lundercab_chase5: (color)
     lfeature: off
     l_collect5:
         color: (color)
@@ -93,6 +103,8 @@
         fade: 200ms
 - duration: 1
   lights:
+    lundercab: off
+    lundercab_chase6: (color)
     lfeature: off
     l_collect6:
         color: (color)
@@ -111,6 +123,8 @@
         fade: 200ms
 - duration: 1
   lights:
+    lundercab: off
+    lundercab_chase1: (color)
     lfeature: off
     l_collect7:
         color: (color)  
@@ -129,6 +143,8 @@
         fade: 200ms
 - duration: 1
   lights:
+    lundercab: off
+    lundercab_chase2: (color)
     lfeature: off
     l_collect8:
         color: (color)
@@ -147,6 +163,8 @@
         fade: 200ms
 - duration: 1
   lights:
+    lundercab: off
+    lundercab_chase3: (color)
     lfeature: off
     l_collect9:
         color: (color)
@@ -165,6 +183,8 @@
         fade: 200ms
 - duration: 1
   lights:
+    lundercab: off
+    lundercab_chase4: (color)
     lfeature: off
     l_collect10:
         color: (color)
@@ -183,6 +203,8 @@
         fade: 200ms
 - duration: 1
   lights:
+    lundercab: off
+    lundercab_chase5: (color)
     lfeature: off
     l_collect11: 
         color: (color)
@@ -201,6 +223,8 @@
         fade: 200ms
 - duration: 1
   lights:
+    lundercab: off
+    lundercab_chase6: (color)
     lfeature: off
     l_collect12:
         color: (color)
@@ -219,6 +243,8 @@
         fade: 200ms
 - duration: 1
   lights:
+    lundercab: off
+    lundercab_chase1: (color)
     lfeature: off
     l_collect13:
         color: (color)
@@ -237,6 +263,8 @@
         fade: 200ms
 - duration: 1
   lights:
+    lundercab: off
+    lundercab_chase2: (color)
     lfeature: off
     l_collect14:
         color: (color)
@@ -255,6 +283,8 @@
         fade: 200ms
 - duration: 1
   lights:
+    lundercab: off
+    lundercab_chase3: (color)
     lfeature: off
     l_collect15:
         color: (color)
@@ -273,6 +303,8 @@
         fade: 200ms
 - duration: 1
   lights:
+    lundercab: off
+    lundercab_chase4: (color)
     lfeature: off
     l_collect16:
         color: (color)
