--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -1,6 +1,6 @@
 #config_version=5
 mode:
-    start_events: ball_starting
+    start_events: ball_started
     priority: 100
 
 shot_profiles:
@@ -71,12 +71,19 @@ event_player:
   recalculate_worldjackpot{current_player.world_jackpot > 100000}:
     world_jackpot_enable
    
+  # -- MULTIBALL START LOGIC
+  
   #START VILLAGER MULTIBALL ON PLUNGE
   sw_playfield_active_active{device.multiball_locks.villagerlock.locked_balls==1 and device.multiball_locks.villagerlock.enabled}:
     villagermultiball_start
+
   #START NIGHT MULTIBALL ON PLUNGE
   sw_playfield_active_active{device.multiball_locks.nightlock.locked_balls==1 and device.multiball_locks.nightlock.enabled}:
     nightmode_start
+
+  #START THE END MULTIBALL ON PLUNGE
+  sw_playfield_active_active{device.multiball_locks.endlockright.locked_balls==1 and device.multiball_locks.endlockright.enabled}:
+    theendmultiball_start
 
   #COMPLETE WORLDS WHEN NIGHT MODE STARTS
   multiball_nightmb_started{current_player.world_id==1}:
@@ -100,19 +107,21 @@ event_player:
     outlanegate_open
 
   multiball_nightmb_ended{current_player.world_id==1}:
-    world2_start
+    theend_start
+    #world2_start   
   multiball_nightmb_ended{current_player.world_id==2}:
-    world3_start
+    world3_start   
   multiball_nightmb_ended{current_player.world_id==3}:
     world4_start
   multiball_nightmb_ended{current_player.world_id==4}:
     world5_start
   multiball_nightmb_ended{current_player.world_id==5}:
-    world6_start
+    theend_start
 
-  world_collected{current_player.multiplier_mb==1}:
-    nightmode_ready
-    villagermb_disable
+  # world_collected{current_player.multiplier_mb==1}:
+  #  nightmode_ready
+  #  villagermb_disable
+
   world1_collected{current_player.multiplier_mb==1}:
     nightmode_ready
     villagermb_disable
@@ -148,35 +157,53 @@ counters:
       restart_events: multiball_nightmb_ended,multiball_villagermb_ended, mode_base_started
       disable_events: villagermb_disable
       enable_events: mode_base_started
-      persist_state: true
 
 multiball_locks:
-   villagerlock:
-     balls_to_lock: 1
-     locked_ball_counting_strategy: physical_only
-     lock_devices: bd_topkicker 
-     enable_events: villagermultiball_ready
-     disable_events: villagermultiball_start, villagermb_disable
-   nightlock:
-     balls_to_lock: 1
-     locked_ball_counting_strategy: physical_only
-     lock_devices: bd_scoop 
-     enable_events: nightmode_ready
-     disable_events: nightmode_start, nightmode_disable
+  villagerlock:
+    balls_to_lock: 1
+    locked_ball_counting_strategy: physical_only
+    lock_devices: bd_topkicker 
+    enable_events: villagermultiball_ready
+    disable_events: villagermultiball_start, villagermb_disable
+  nightlock:
+    balls_to_lock: 1
+    locked_ball_counting_strategy: physical_only
+    lock_devices: bd_scoop 
+    enable_events: nightmode_ready
+    disable_events: nightmode_start, nightmode_disable
 
+  endlocktop:
+    balls_to_lock: 1
+    locked_ball_counting_strategy: physical_only
+    lock_devices: bd_topkicker 
+    enable_events: theendmultiball_ready
+    disable_events: theendmultiball_start, endmode_disable
+  endlockright:
+    balls_to_lock: 1
+    locked_ball_counting_strategy: physical_only
+    lock_devices: bd_scoop 
+    enable_events: multiball_lock_endlocktop_full
+    disable_events: theendmultiball_start, endmode_disable
+  
 multiballs:
-   villagermb:
-     ball_count: 2
-     ball_locks: bd_topkicker
-     enable_events: villagermultiball_ready
-     start_events: villagermultiball_start
-     shoot_again: 0s
-   nightmb:
-     ball_count: 2
-     ball_locks: bd_scoop
-     enable_events: nightmode_ready
-     start_events: nightmode_start
-     shoot_again: 0s
+  villagermb:
+    ball_count: 2
+    ball_locks: bd_topkicker
+    enable_events: villagermultiball_ready
+    start_events: villagermultiball_start
+    shoot_again: 0s
+  nightmb:
+    ball_count: 2
+    ball_locks: bd_scoop
+    enable_events: nightmode_ready
+    start_events: nightmode_start
+    shoot_again: 0s
+  endmb:
+    ball_count: 3
+    ball_locks: bd_topkicker, bd_scoop
+    enable_events: theendmultiball_ready
+    start_events: theendmultiball_start
+    shoot_again: 0s   
 
 #Player Variables
 variable_player:
@@ -317,10 +344,6 @@ light_player:
     lgi:
       color: white
     lfeature: off
-  world1_collected:
-    l_spinnerflash1: red
-  world_collected:
-    l_spinnerflash2: red
   spinner_hit{device.counters.counter_villagermultiball.value>=4 and device.counters.counter_villagermultiball.value<8}: #LEVEL 1000
     l_spinner1: green
     l_spinner2: off
@@ -432,10 +455,10 @@ achievements:
     show_when_selected: show_flashcolor 
     show_when_started: show_fadecolor
     show_when_completed: show_solidcolor 
-    events_when_started: world6_started
+    events_when_started: theend_started
     reset_events: reset_worlds
-    enable_events: world6_start
-    complete_events: world6_completed
+    enable_events: theend_start
+    complete_events: theend_completed
     events_when_completed: rotate_mission_rotator
     restart_on_next_ball_when_started: true
     enable_on_next_ball_when_enabled: true
@@ -443,7 +466,7 @@ achievements:
 achievement_groups:
   worlds:
     achievements: world1, world2, world3, world4, world5, world6
-    start_selected_events: world_start, world1_start, world2_start, world3_start, world4_start, world5_start, world6_start
+    start_selected_events: world_start, world1_start, world2_start, world3_start, world4_start, world5_start, theend_start
     events_when_enabled: mission_rotator_ready
     auto_select: true
     enable_while_no_achievement_started: true
