--- a/modes/base/shows/show_dropcreepers.yaml
+++ b/modes/base/shows/show_dropcreepers.yaml
@@ -1,20 +1,20 @@
 #show_version=5
 - duration: 1  
 - duration: .1
-  coils:
-    c_drop_target1_drop: pulse
+  events:
+    drop_drop1
 - duration: .1
-  coils:
-    c_drop_target2_drop: pulse
+  events:
+    drop_drop2
 - duration: .1
-  coils:
-    c_drop_target3_drop: pulse
+  events:
+    drop_drop3
 - duration: .1
-  coils:
-    c_drop_target4_drop: pulse
+  events:
+    drop_drop4
 - duration: .1
-  coils:
-    c_drop_target5_drop: pulse
+  events:
+    drop_drop5
 - duration: .1
-  coils:
-    c_drop_target6_drop: pulse
+  events:
+    drop_drop6
