--- a/modes/bonusdisplay/config/bonusdisplay.yaml
+++ b/modes/bonusdisplay/config/bonusdisplay.yaml
@@ -1,6 +1,6 @@
 #config_version=5
 mode:
-    start_events: ball_starting
+    start_events: ball_started
     stop_events: ball_ended
     priority: 1000
     
